--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ flutter:
   assets:
    - assets/background.png
    - assets/picture.jpg
+   - assets/Logo.png
+   - assets/profile.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
