--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/background.png
+   - assets/background2.png
    - assets/picture.jpg
    - assets/Logo.png
    - assets/profile.jpg
@@ -50,7 +51,7 @@ flutter:
    - assets/Sample2.jpg
    - assets/berita.jpg
    - assets/berita2.jpg
-   - assets/bg.jpg
+   - assets/1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
