--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  fl_chart: ^0.8.1
+  share:
   charts_flutter: ^0.8.1
   flutter_pdfview:
   path_provider:
