--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  flutter_screenutil: ^1.0.2
   fl_chart: ^0.8.1
   share:
   charts_flutter: ^0.8.1
