--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  flutter_open_whatsapp:
   dio:
   flutter_screen_scaler:
   font_awesome_flutter:
