replace detail news and promo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,12 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
+  bottom_navy_bar:
+  fluttertoast:
+  shared_preferences:
   flutter_open_whatsapp:
   dio:
   flutter_screen_scaler:
